Contact email, CSS fix for thank-you on mobile

--- a/new-2014-site/styles/style.scss
+++ b/new-2014-site/styles/style.scss
@@ -249,7 +249,7 @@ input.email {
   display: none;
   text-align: center;
   background: rgba(#fff, 0.05);
-  padding: 15px 0;
+  padding: 15px 5px;
   border-radius: 10px;
   h2 {
     font-weight: normal;
